--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Shadows+Into+Light" />
     <link rel="stylesheet" href="mattriley.css" />
+    <script text="text/JavaScript" src="webcomponents.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <dev-bar app-name="MATTRILEY.GITHUB.IO"></dev-bar>
     <div id="root">
         <div class="dev-bar">
             <div class="left">
