render children within dev bar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <dev-bar app-name="MATTRILEY.GITHUB.IO"></dev-bar>
+    <p>Web component:</p>
+    <dev-bar app-name="MATTRILEY.GITHUB.IO">
+        <a target="_blank" href="https://github.com/mattriley/mattriley.github.io">Source code</a>
+    </dev-bar>
+    <p>Plain HTML:</p>
     <div id="root">
         <div class="dev-bar">
             <div class="left">
