add wip bar component

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <dev-bar app-name="MATTRILEY.GITHUB.IO">
         <a target="_blank" href="https://github.com/mattriley/mattriley.github.io">Source code</a>
     </dev-bar>
+    <wip-bar></wip-bar>
     <p>Plain HTML:</p>
-    <div id="root">
         <div class="dev-bar">
             <div class="left">
                 <span class="app-name">MATTRILEY.GITHUB.IO</span>
@@ -28,6 +28,5 @@
         <div class="wip-bar">
             <span class="wip-text">WORK IN PROGRESS</span>
         </div>     
-    </div>
   </body>
 </html>
