--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" href="mattriley.css" />
-    <script text="text/JavaScript" src="webcomponents.js"></script>
-  </head>
-  <body>
+    <script text="text/JavaScript" src="web-components.js"></script>
+</head>
+
+<body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <p>Web component:</p>
     <dev-bar app-name="MATTRILEY.GITHUB.IO">
@@ -15,17 +17,18 @@
     </dev-bar>
     <wip-bar></wip-bar>
     <p>Plain HTML:</p>
-        <div class="dev-bar">
-            <div class="left">
-                <span class="app-name">MATTRILEY.GITHUB.IO</span>
-                <a class="author" target="_blank" href="https://www.linkedin.com/in/mattrileyau/">by Matt Riley</a>
-            </div>
-            <div class="right">
-                <a target="_blank" href="https://github.com/mattriley/mattriley.github.io">Source code</a>
-            </div>
-        </div>   
-        <div class="wip-bar">
-            <span class="wip-text">WORK IN PROGRESS</span>
-        </div>     
-  </body>
+    <div class="dev-bar">
+        <div class="left">
+            <span class="app-name">MATTRILEY.GITHUB.IO</span>
+            <a class="author" target="_blank" href="https://www.linkedin.com/in/mattrileyau/">by Matt Riley</a>
+        </div>
+        <div class="right">
+            <a target="_blank" href="https://github.com/mattriley/mattriley.github.io">Source code</a>
+        </div>
+    </div>
+    <div class="wip-bar">
+        <span class="wip-text">WORK IN PROGRESS</span>
+    </div>
+</body>
+
 </html>
