--- a/docs-old/index.html
+++ b/docs-old/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="stylesheet" href="mattriley.css" />
+    <link rel="stylesheet" href="web-components.css" />
     <script text="text/JavaScript" src="web-components.js"></script>
 </head>
 
